fixed navigation behavior on mobile

--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -47,7 +47,7 @@
   div {
     background-color: $mainOrange;
     border-radius: 3px;
-    content: '';
+    content: "";
     display: block;
     height: 3px;
     margin: 8px 0;
